# AeroControl

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BACKLOG.md  LICENSE  PROJECT_PLAN.md  README.md  build.sh  pyproject.toml  render.yaml  requirements.txt
.atl/: skill-registry.md
.github/workflows/: ci.yml
.obsidian/: workspace.json
apps/compliance/: admin.py  apps.py  context_processors.py  forms.py  models.py  security.py  storage.py  tests.py  urls.py  views.py
apps/core/: admin.py  anonymized_snapshot.py  audit.py  forms.py  imports.py  middleware.py  models.py  signals.py  test_snapshot.py  tests.py  views.py
apps/dashboard/: apps.py  urls.py  views.py
apps/maintenance/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/operations/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
config/: urls.py
docs/: 01-Proyecto.md  02-Arquitectura.md  03-Roadmap.md  04-Seguimiento.md  05-Notas-Tecnicas.md  06-Plan-Local-First.md  README-Obsidian.md  SECURITY.md  backend-follow-up.md  backend-plan.md  chapter1-import.md  frontend-boundary.md  impeccable-audit.md  impeccable-follow-up-plan.md  local-backup-runbook.md  local-backup.md  onedrive-notebook-pc.md  postgresql-readiness.md  supabase-cli.md
openspec/: config.yaml
prompts/: 00_BOOTSTRAP_OPENCODE.md  01_PHASE1_NEXT.md
scripts/: backup-local.ps1  backup.ps1  compile_translations.py  register-backup-task.ps1  restore-local.ps1  run.ps1  setup.ps1  supabase-backup.ps1  verify-local-backup.ps1  verify.ps1
templates/: base.html
templatetags/: aero_tags.py
(+126 files in other folders)
